--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -68,7 +68,6 @@ li{padding:4px;}
 .sha{margin-left:8px;padding:6px 6px 6px 8px;border-left:1px solid #eee;}
 .screen-shot{width:580px;height:auto;border:2px solid #eee;}
 .descr{min-width:100px;}
-.dl-wrapper{display:flex;flex-direction:row;}
 .disable{opacity:0.4;pointer-events:none;}
 [notice]{margin:8px 0px 8px 48px;}
 [red]{color:rgb(49, 8, 8);}
@@ -79,3 +78,19 @@ li{padding:4px;}
 [row]{display:flex;flex-direction:row;}
 [column]{display:flex;flex-direction:column;}
 [flex]{flex:1;}
+
+flow-selector.file-list{margin:10px 0px;}
+@media (min-width:500px){
+    flow-selector.file-list{min-width:390px;}
+}
+.download-sha1-link{margin:0px 15px;cursor:pointer;}
+
+body.flow-theme-light{
+    --flow-input-box-shadow:10px 10px 30px  rgba(0,0,0,0.05), -10px -10px 30px rgba(0,0,0,0.05);
+    --flow-input-bg:white;
+    --flow-input-color:#585858;
+    --flow-select-dropdown-border:0px;
+}
+body.flow-theme-light .file-list{
+    --flow-border-color:white;
+}
