--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -96,5 +96,11 @@ body.flow-theme-light .file-list{
 }
 .tab-content:not(.active){display:none}
 .top-menus{display:flex;align-items:center;}
-.top-menus a{margin:10px;}
+.top-menus a{margin:10px;position:relative;}
 .top-menus a:not(.disabled){cursor:pointer;}
+.top-menus a:after{
+    opacity:0;transition:opacity 1s ease;
+    content:"";position:absolute;bottom:-6px;left:0px;width:100%;
+    border-bottom:2px solid #009688;
+}
+.top-menus a.active:after{opacity:1}
