--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -66,7 +66,7 @@ position:relative;}*/
 li{padding:4px;}
 .components li{padding:3px;}
 .sha{margin-left:8px;padding:6px 6px 6px 8px;border-left:1px solid #eee;}
-.screen-shot{width:580px;height:auto;border:2px solid #eee;}
+.screen-shot{width:90%;height:auto;border:2px solid #eee;}
 .descr{min-width:100px;}
 .disable{opacity:0.4;pointer-events:none;}
 [notice]{margin:8px 0px 8px 48px;}
