--flow-app-footer-height: <auto height>

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -86,7 +86,7 @@ flow-selector.file-list{margin:10px 0px;}
 .download-sha1-link{margin:0px 15px;cursor:pointer;}
 
 body {
-    --flow-app-footer-height: 92px;
+    /*--flow-app-footer-height:92px;*/
     --flow-app-footer-bg: transparent;
     --flow-app-footer-color: #000;
 }
