--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -89,6 +89,10 @@ body {
     /*--flow-app-footer-height:92px;*/
     --flow-app-footer-bg: transparent;
     --flow-app-footer-color: #000;
+
+    --flow-app-wrapper-flex:1 0 auto;
+    --flow-app-wrapper-height:auto;
+    --flow-app-main-overflow:auto;
 }
 
 body.flow-theme-light{
