--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -150,7 +150,7 @@ body.flow-theme-light .file-list{
     bottom:0px;
 
     margin-top: 32px;
-    padding-4px;
+    padding: 4px;
     border-top: 1px solid #eee;
     text-align: center;
 }
